# big_uint

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: big_uint.h  ints.h
src/: arithmetic.c  bitwise.c  hex.c  init.c  utils.c  utils.h
test/: CMakeLists.txt  arithmetic.c  arithmetic.h  bitwise.c  bitwise.h  hex.c  hex.h  init.c  init.h  main.c
